2017-08-28  Andy Estes  <aestes@apple.com>

        [Cocoa] Upstream WKGetWebDefaultCFStringEncoding()
        https://bugs.webkit.org/show_bug.cgi?id=176039

        Reviewed by Alex Christensen.

        * wtf/spi/cf/CFStringSPI.h:

2017-08-26  Yusuke Suzuki  <utatane.tea@gmail.com>

        Unreviewed, suppress warnings in GTK port

        Add printf format attribute.

        * wtf/text/WTFString.cpp:

2017-08-25  Eric Carlson  <eric.carlson@apple.com>

        Add Logger::logAlways
        https://bugs.webkit.org/show_bug.cgi?id=175996

        Reviewed by Jer Noble.

        * wtf/Assertions.cpp:
        * wtf/Assertions.h:

2017-08-25  Daniel Bates  <dabates@apple.com>

        Demarcate code added due to lack of NSDMI for aggregates
        https://bugs.webkit.org/show_bug.cgi?id=175990

        Reviewed by Andy Estes.

        * wtf/Compiler.h:

2017-08-25  Don Olmstead  <don.olmstead@sony.com>

        Define *_GIGACAGE_MASK when Gigacage is not supported
        https://bugs.webkit.org/show_bug.cgi?id=175994

        Reviewed by Mark Lam.

        * wtf/Gigacage.h:

2017-08-25  Eric Carlson  <eric.carlson@apple.com>

        Add String::format variant that takes va_args
        https://bugs.webkit.org/show_bug.cgi?id=175988

        Reviewed by Jer Noble.

        * wtf/text/WTFString.cpp:
        (WTF::createWithFormatAndArguments): Created with the guts of String::format.
        (WTF::String::formatWithArguments): New, call createWithFormatAndArguments.
        (WTF::String::format): Move logic to createWithFormatAndArguments, use it.
        * wtf/text/WTFString.h:

2017-08-25  Saam Barati  <sbarati@apple.com>

        Support compiling catch in the DFG
        https://bugs.webkit.org/show_bug.cgi?id=174590
        <rdar://problem/34047845>

        Reviewed by Filip Pizlo.

        This patch generalizes the BackwardsGraph fake root into a more generalizable
        class called SingleRootGraph. SingleRootGraph exposes the general graph interface